<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>org.t246osslab</groupId>
	<artifactId>easybuggy4sb</artifactId>
	<version>1.0.0-SNAPSHOT</version>
	<packaging>war</packaging>

	<name>easybuggy4sb</name>
	<description>EasyBuggy project for Spring Boot</description>

	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>1.5.6.RELEASE</version>
		<relativePath /> <!-- lookup parent from repository -->
	</parent>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<java.version>1.7</java.version>
		<!-- default properties (JDK 1.8 or later) -->
		<jvm.args>-XX:MaxMetaspaceSize=128m -Xloggc:logs/gc_%p_%t.log
			-XX:NativeMemoryTracking=summary</jvm.args>
		<derby.version>10.13.1.1</derby.version>
	</properties>

	<profiles>
		<profile>
			<id>JDK-Switch</id>
			<activation>
				<jdk>1.7</jdk>
			</activation>
			<properties>
				<jvm.args>-XX:MaxPermSize=128m -Xloggc:logs/gc.log</jvm.args>
				<derby.version>10.12.1.1</derby.version>
			</properties>
		</profile>
	</profiles>

	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-thymeleaf</artifactId>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-jdbc</artifactId>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-mail</artifactId>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-ldap</artifactId>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-devtools</artifactId>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-tomcat</artifactId>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-actuator</artifactId>
		</dependency>

		<dependency>
			<groupId>org.apache.tomcat.embed</groupId>
			<artifactId>tomcat-embed-jasper</artifactId>
		</dependency>
		
		<dependency>
			<groupId>javax.servlet</groupId>
			<artifactId>jstl</artifactId>
		</dependency>

		<dependency>
			<groupId>com.unboundid</groupId>
			<artifactId>unboundid-ldapsdk</artifactId>
		</dependency>

		<dependency>
			<groupId>org.apache.derby</groupId>
			<artifactId>derby</artifactId>
			<version>${derby.version}</version><!--$NO-MVN-MAN-VER$-->
		</dependency>

		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-lang3</artifactId>
			<version>3.0</version>
		</dependency>

		<dependency>
	  		<groupId>com.google.oauth-client</groupId>
	  		<artifactId>google-oauth-client</artifactId>
	  		<version>1.30.3</version>
	  	</dependency>
	
	  	<dependency>
	  		<groupId>com.google.api-client</groupId>
	  		<artifactId>google-api-client-gson</artifactId>
	  		<version>1.30.3</version>
	  	</dependency>
	
		<dependency>
			<groupId>mysql</groupId>
			<artifactId>mysql-connector-java</artifactId>
			<version>8.0.28</version>
		</dependency>

		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
		</dependency>
		<dependency>
			<groupId>org.owasp.esapi</groupId>
			<artifactId>esapi</artifactId>
			<version>2.1.0.1</version>
		</dependency>

		<dependency>
			<groupId>com.sun.mail</groupId>
			<artifactId>javax.mail</artifactId>
			<!-- Override this with old version to cause mail header injection -->
			<version>1.5.1</version><!--$NO-MVN-MAN-VER$-->
		</dependency>

	</dependencies>

	<build>
		<finalName>ROOT</finalName>
		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
				<configuration>
					<jvmArguments>
						${jvm.args}
						-Xmx256m
						-XX:MaxDirectMemorySize=90m
						-XX:+UseSerialGC
						-XX:+PrintHeapAtGC
						-XX:+PrintGCDetails
						-XX:+PrintGCDateStamps
						-XX:+UseGCLogFileRotation
						-XX:NumberOfGCLogFiles=5
						-XX:GCLogFileSize=10M
						-XX:GCTimeLimit=15
						-XX:GCHeapFreeLimit=50
						-XX:+HeapDumpOnOutOfMemoryError
						-XX:HeapDumpPath=logs/
						-XX:ErrorFile=logs/hs_err_pid%p.log
						<!-- Auto kill JVM when OOME occurs: For post-8u92 JDKs -->
						<!-- -XX:+CrashOnOutOfMemoryError -->
						<!-- Auto kill JVM when OOME occurs: For Linux -->
						<!-- -XX:OnOutOfMemoryError="kill -9 %p" -->
						<!-- Auto kill JVM when OOME occurs: For Windows -->
						<!-- -XX:OnOutOfMemoryError=taskkill /F /PID %p -->
						<!-- UnlockCommercialFeatures/FlightRecorder: For Oracle Java commercial use -->
						<!-- -XX:+UnlockCommercialFeatures -XX:+FlightRecorder -->
						<!-- -agentpath:/root/eclipse/plugins/org.zeroturnaround.eclipse.embedder_7.0.8.RELEASE/jrebel/lib/libjrebel64.so -->
						-agentlib:jdwp=transport=dt_socket,server=y,address=9009,suspend=n
						-Dderby.stream.error.file=logs/derby.log
						-Dderby.infolog.append=true
						-Dderby.language.logStatementText=true
						-Dderby.locks.deadlockTrace=true
						-Dderby.locks.monitor=true
						-Dderby.storage.rowLocking=true
						-Dcom.sun.management.jmxremote
						-Dcom.sun.management.jmxremote.port=7900
						-Dcom.sun.management.jmxremote.ssl=false
						-Dcom.sun.management.jmxremote.authenticate=false
						<!-- -Djava.security.manager -->
						<!-- -Djava.security.policy=catalina.policy -->
						<!-- -Deasybuggy.mode=only-vulnerabilities -->
						-ea
					</jvmArguments>
				</configuration>
			</plugin>
		</plugins>
	</build>

</project>
